--- a/KLy.html
+++ b/KLy.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimal-ui, user-scalable=no">
     <title>💖💖❤️‍🔥🔥</title>
 
-    <link rel="stylesheet" href="/src/output.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
-    <link rel="stylesheet" href="/src/preload.css">
+    <link rel="stylesheet" href="./src/output.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"./>
+    <link rel="stylesheet" href="./src/preload.css">
 
-    <link rel="shortcut icon" href="/src/images/Logo_PTIT_University.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./src/images/Logo_PTIT_University.png" type="image/x-icon">
 
 </head>
 
@@ -44,13 +44,13 @@ jgs [::::::::::: :::] )
             <div class=" h-full w-full bg-gradient-to-b from-[#ffecf0] to-[#ffd5ff]"></div>
         </div> -->
         <div class="relative h-full w-full">
-            <img class="relative max-w-[80%] top-12 left-[10%] animate__animated animate__pulse animate__infinite" style="animation-duration: 5s;" src="/src/images/text.png" alt="" srcset="">
+            <img class="relative max-w-[80%] top-12 left-[10%] animate__animated animate__pulse animate__infinite" style="animation-duration: 5s;" src="./src/images/text.png" alt="" srcset="">
             <div class="">
                 <div class="relative z-30 cursor-pointer top-20 flex justify-center animate__animated animate__pulse animate__infinite" onclick="openLetters()">
                     <span class="font-BeCool bg-[#C96FB6] px-6 pt-2 pb-1 rounded-xl text-white text-xl border-[2px] border-[#402C70] border-solid">Bấm vào đây nè</span>
                 </div>
             </div>
-            <img class="absolute z-10 max-w-[90%] max-h-[60%] bottom-[-8px] left-[5%] animate__animated animate__pulse animate__infinite" style="animation-duration: 6s;" src="/src/images/woman.png" alt="" srcset="/src/images/woman.png">
+            <img class="absolute z-10 max-w-[90%] max-h-[60%] bottom-[-8px] left-[5%] animate__animated animate__pulse animate__infinite" style="animation-duration: 6s;" src="./src/images/woman.png" alt="" srcset="./src/images/woman.png">
             
         </div>
     </div>
@@ -96,9 +96,9 @@ jgs [::::::::::: :::] )
 
 </body>
 
-<script src="/data/KLy.js"></script>
+<script src="./data/KLy.js"></script>
 
-<script src="/src/dump.js"></script>
+<script src="./src/dump.js"></script>
 
 
 </html>
