--- a/KLy.html
+++ b/KLy.html
@@ -32,7 +32,13 @@ jgs [::::::::::: :::] )
 -->
 
 
-<body class="h-screen select-none w-screen bg-[url('/src/images/PTIT.jpg')] bg-cover bg-center flex justify-center overflow-hidden">
+<style>
+    .letters {
+        background-color: white;
+    }
+</style>
+
+<body class="h-screen select-none w-screen bg-[url('./images/PTIT.jpg')] bg-cover bg-center flex justify-center overflow-hidden">
     
     <div class="preload z-40 h-screen w-screen">
         <div class="back"></div>
