--- a/MAnh.html
+++ b/MAnh.html
@@ -31,8 +31,13 @@ jgs [::::::::::: :::] )
     https://www.facebook.com/duongdzin/
 -->
 
+<style>
+    .letters {
+        background-color: white;
+    }
+</style>
 
-<body class="h-screen select-none w-screen bg-[url('/src/images/PTIT.jpg')] bg-cover bg-center flex justify-center overflow-hidden">
+<body class="h-screen select-none w-screen bg-[url('./images/PTIT.jpg')] bg-cover bg-center flex justify-center overflow-hidden">
     
     <div class="preload z-40 h-screen w-screen">
         <div class="back"></div>
